[package]
name = "pkvstore"
version = "0.1.0"
authors = ["James <jamesleahy314@gmail.com>"]
edition = "2018"

[dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.1"
tempfile = "3.1.0"
walkdir = "2.2.8"
failure = "0.1.5"
clap = "2.33.0"
serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.40"
